[gd_scene load_steps=15 format=3 uid="uid://cpulme8ybm4li"]

[ext_resource type="Script" path="res://scripts/void_projectile.gd" id="1_4pei1"]
[ext_resource type="Texture2D" uid="uid://d015t6vq2ehlm" path="res://assets/void_projectile.png" id="2_5ox2n"]
[ext_resource type="AudioStream" uid="uid://vew42k23j7gl" path="res://assets/audio/void_ball.wav" id="3_cfkgq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ksaxk"]
atlas = ExtResource("2_5ox2n")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cryo8"]
atlas = ExtResource("2_5ox2n")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_atm42"]
atlas = ExtResource("2_5ox2n")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqctk"]
atlas = ExtResource("2_5ox2n")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq52d"]
atlas = ExtResource("2_5ox2n")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfciu"]
atlas = ExtResource("2_5ox2n")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgfuw"]
atlas = ExtResource("2_5ox2n")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pynmf"]
atlas = ExtResource("2_5ox2n")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyd86"]
atlas = ExtResource("2_5ox2n")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_wf0sb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksaxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cryo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atm42")
}],
"loop": false,
"name": &"hit",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqctk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq52d")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfciu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgfuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pynmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyd86")
}],
"loop": false,
"name": &"spawn",
"speed": 4.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qf5ak"]
radius = 12.0

[node name="void_projectile" type="Area2D"]
top_level = true
script = ExtResource("1_4pei1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_wf0sb")
animation = &"hit"
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"source": "res://assets/void_projectile.aseprite"
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_qf5ak")
disabled = true

[node name="hit_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="spawn_timer" type="Timer" parent="."]
one_shot = true

[node name="duration_timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cfkgq")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="hit_timer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="duration_timer" to="." method="_on_duration_timer_timeout"]
